fixed image being too large

--- a/themes/kmom02_test/scss/base.scss
+++ b/themes/kmom02_test/scss/base.scss
@@ -88,7 +88,7 @@ body{
         max-width: 60vw;
     } 
 
-    .my-pic {
+    .pic {
         width: 10vw;
         float: left;
         margin: 1rem;
